# agileplace-mcp-server

./: .fastmcp-cloud  .gitignore  CHANGELOG.md  CLAUDE_DESKTOP_CONFIG.json  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_FASTMCP_CLOUD.md  DOMAIN_FORMAT.md  FASTMCP_CLOUD_FINAL_FIX.md  FASTMCP_CLOUD_FIX.md  FASTMCP_COMPATIBILITY_ANALYSIS.md  FASTMCP_DEPLOYMENT_READY.md  IMPLEMENTATION_SUMMARY.md  KWARGS_FIX.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  server.py  test_imports.py
agileplace_mcp/: __init__.py  __main__.py  client.py  server.py
agileplace_mcp/tools/: boards.py  bulk.py  cards.py  connections.py  dependencies.py  query.py
src/: __main__.py  auth.py  client.py  models.py  server.py
src/tools/: __init__.py  boards.py  bulk.py  cards.py  connections.py  dependencies.py  query.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py
